# social-media-content-creation-mvp

./: .env.example  .gitignore  app.py  packages.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
.streamlit/: config.toml
docs/: STRATEGIA ACQUISIZIONE ORGANICA.pngZone.Identifier
docs/meetings/: Meeting1.txt
docs/plans/: plan_meeting2.txt
src/competitor_analysis/: cli.py  config.py  models.py
src/competitor_analysis/analysis/: competitor_finder.py  kpi_analyzer.py
src/competitor_analysis/output/: export.py  table.py
src/competitor_analysis/scraper/: profile.py  search.py
src/competitor_analysis/storage/: history.py
tests/: conftest.py  test_models.py  test_output.py  test_scraper.py
